# fp2024

./: .gitattributes  Makefile  README.md  detect_latest.sh  detect_latest_pr.ml  exam.md  grading.md  lint_filesystem.py  tasks.md
CSharpStrange/: .envrc  .zanuda  CSharpStrange.opam  dune-project
CSharpStrange/lib/: ast.ml  dune  parser.ml  parser.mli  prettyprinter.ml  prettyprinter.mli
CSharpStrange/tests/: ast_fact.t  dune  parser_tests.ml  pp_tests.ml  pp_tests.mli
EChandraSutraDhar/: .ocamlformat  EChandraSutraDhar.opam  Makefile  dune  dune-project
EChandraSutraDhar/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli
EChandraSutraDhar/tests/: ast_tests.ml  dune  inferencer_tests.ml  inferencer_tests.mli  interpreter_tests.ml  parser_tests.ml  parser_tests.mli  tests.t
EChirkov/: EChirkov.opam  MiniML.opam  dune-project
EChirkov/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parse.ml  parser.ml  parser.mli
EChirkov/tests/: dune  factorial_ast.t  inferencer_tests.ml  inferencer_tests.mli  interpreter_tests.ml  parser_tests.ml  test.t
EIshbaev/: EIshbaev.opam  dune  dune-project
EIshbaev/lib/: ast.ml  dune
EIshbaev/tests/: ast_test.t  dune
ELutsyuk/: .zanuda  ELutsyuk.opam  LICENSE  Makefile  dune  dune-project
ELutsyuk/lib/: ast.ml  dune  parser.ml
ELutsyuk/tests/: EvalTests.ml  InferTests.ml  ParserTests.ml  dune  manytests  parser.ml  parser.mli  parser_tests.ml  testAst.t  test_ast.t  test_parser.ml  tests.t
EMigunova/: .ocamlinit  EMigunova.opam  dune-project
EMigunova/lib/: ast.byte  ast.cmi  ast.cmo  ast.ml  dune  inference.cmi  inference.cmo  inference.ml  inference.mli  interpreter.cmi  interpreter.cmo  interpreter.ml  interpreter.mli  parse.cmi  parse.cmo  parse.ml  parse.mli  script.sh
EMigunova/tests/: .gitignore  dune  manytests  manytests_inference.t  parsetree_factorial.t  print_ast.t  tests.ml
ENafikov/: .zanuda  ENafikov.opam  Makefile  dune-project
ENafikov/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpret.ml  interpret.mli  parser.ml  parser.mli  ty.ml  ty.mli
ETenyaeva/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli
ETenyaeva/tests/: dune  inferencer.ml  inferencer_mantests_typed.t  inferencer_manytests_do_not_type.t  interpreter.ml  interpreter.mli  interpreter_mantests_typed.t  interpreter_manytests_do_not_type.t  parser.ml
EUsoltsev/: EUsoltsev.opam  dune-project
EUsoltsev/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  parser.ml  parser.mli  typing.ml
EUsoltsev/tests/: ast_check.t  dune  inferencer_tests.ml  interpreter_tests.ml  manytests  parser_tests.ml  parser_tests.mli  tests.t
FSharpActivePatterns/: FSharpActivePatterns.opam  abc.txt  dune  dune-project
FSharpActivePatterns/lib/: AST.ml  REPLUtils.ml  REPLUtils.mli  arithmParser.ml  ast.ml  ast.mli  astPrinter.ml  astPrinter.mli  dune  extractIdents.ml  extractIdents.mli  inferencer.ml  inferencer.mli  interpreter.ml  interpreter.mli  keywordChecker.ml  keywordChecker.mli  parser.ml  parser.mli  prettyPrinter.ml  prettyPrinter.mli  printAST.ml  printAst.ml  printAst.mli  typedTree.ml  typedTree.mli  typesPp.ml  typesPp.mli
FSharpActivePatterns/tests/: activePatterns.t  dune  inference.t  interpret.t  interpret_manytests.t  print_ast.ml  print_ast.t  print_expr.t  qcheck.t
FSharpUnitsOfMeasure/: .gitignore  FSharpUnitsOfMeasure.opam  LICENSE.md  dune-project
FSharpUnitsOfMeasure/tests/: dune  repl.t
Go/: .gitignore  Go.opam  LICENSE  dune  dune-project
Go/tests/: dune  repl.t  test_ast.t
Haskell/: .envrc  .gitignore  .ocamlformat  .zanuda  Haskell.opam  LICENSE  dune-project
Haskell/lib/: Pprintast.ml  ast.ml  ast.mli  dune  eval.ml  eval.mli  inferencer.ml  inferencer.mli  integer.ml  interpreter.ml  interpreter.mli  pai.ml  pai.mli  parser.ml  parser.mli  pprint.ml  pprint.mli  pprintast.ml  qcheck.ml  qcheck.mli  run_binding.ml  typedtree.ml  typedtree.mli
Haskell/tests/: ast_test.t  dune  gen_test.ml  parser_test.t  qcheck.t  repl.t
Lambda/: EUsoltsev.opam  Lambda.opam  dune-project
Lambda/lib/: Pprintast.ml  Printast.ml  ast.ml  dune  interpret.ml  lambda.mli  tests.ml  utils.ml  utils.mli
Lambda/tests/: ast_check.t  dune  gen_tests.ml  interpret_tests.t
OCamlOOP/: Makefile  OCamlOOP.opam  dune-project
OCamlOOP/lib/: ast.ml  dune  parser.ml  parser.mli
OCamlOOP/test/: ast_check.t  dune  parser_tests.ml  parser_tests.mli
OCamlPolymorphicVariantsTypes/: .gitignore  OCamlPolymorphicVariantsTypes.opam  dune-project  test.ml
OCamlPolymorphicVariantsTypes/lib/: ast.ml  dune  inferencer.ml  inferencer.mli  parser.ml  parser.mli  parser_utility.ml  parser_utility.mli  pprinter.ml  pprinter.mli  printer.ml  printer.mli  qchecker.ml  qchecker.mli  run_qchecker.ml  typedtree.ml  typedtree.mli  utils.ml  utils.mli
OCamlPolymorphicVariantsTypes/tests/: ast_tests.ml  dune  factorial.test  inferencer_tests.ml  inferencer_tests.mli  interpret_tests.t  parser_tests.ml  (+3 more)
OCamlPrintf/: .gitignore  .ocamlformat  OCamlPrintf.opam  README.md  dune-project
OCamlRV/: .zanuda  Makefile  OCamlRV.opam  README.md  dune  dune-project  t
OCamlWeakTypeVariables/: .gitignore  Makefile  OCamlWeakTypeVariables.opam  dune-project  myocaml.code-workspace
Ocaml/: Ocaml.opam  dune-project
OcamlADT/: .gitignore  OcamlADT.opam  check.sh  dune-project
OcamlBR/: .gitignore  OcamlBR.opam  dune  dune-project
OcamlRV/: Makefile  OcamlRV.opam  dune-project
RISCV_ASM/: COPYING  Makefile  README.md  RISCV_ASM.opam  RISCV_ASM.opam.template  bisect208912845.coverage  bisect331123240.coverage  bisect497999165.coverage  bisect533840084.coverage  bisect543649561.coverage  bisect55306924.coverage  bisect633592834.coverage  bisect705269021.coverage  bisect72714244.coverage  bisect744632816.coverage  bisect790218499.coverage  bisect795557814.coverage  bisect866602326.coverage  bisect913729436.coverage  dune-project
SchemeCWCC/: SchemeCWCC.opam  dune-project
(+1606 files in other folders)
