(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Migunova Anastasia <amigunova422@gmail.com>")

(maintainers "Migunova Anastasia <amigunova422@gmail.com>")

(bug_reports "https://github.com/MigunovaAnastasia1/fp2024")

(homepage "https://github.com/MigunovaAnastasia1/fp2024")

(package
 (name EMigunova) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for miniML")
 (description
  "FIXME. A longer description, for example, which are the most interesting features being supported, etc.")
 (documentation "https://kakadu.github.io/fp2024/docs/EMigunova")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files add the same dependecies here too
  ))
