(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Ruslan Nafikov <ruslan.nafikov.05@bk.ru>")

(maintainers "Ruslan Nafikov <ruslan.nafikov.05@bk.ru>")

(bug_reports "https://github.com/SecretPersona5/fp2024")

(homepage "https://github.com/SecretPersona5/fp2024")

(package
 (name ENafikov)
 (synopsis "An interpreter for miniML")
 (description
  "An interpreter for a subset of the ML language (WIP)")
 (documentation "https://kakadu.github.io/fp2024/docs/Lambda")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files add the same dependecies here too
  ))
