(lang dune 3.7)

(name FSharpUnitsOfMeasure)

(generate_opam_files true)

(cram enable)

(license MIT)

(authors "Daniel Vlasenco" "Andrew Strelnikov")

(maintainers "Daniel Vlasenco" "Andrew Strelnikov")

(bug_reports "https://github.com/DronShock/FSharpUnitsOfMeasure/issues")

(homepage "https://github.com/DronShock/FSharpUnitsOfMeasure")

(package
 (name FSharpUnitsOfMeasure)
 (synopsis "An interpreter for F# with support of units of measure")
 (description "An interpreter for F# with support of units of measure")
 (version 0.1)
 (allow_empty)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
