(lang dune 3.7)

(name FSharpUnitsOfMeasure)

(generate_opam_files true)

(cram enable)

(license MIT)

(authors
 "Daniel Vlasenco <vlasenko.daniil26@gmail.com>"
 "Alexandr Kudrya <alexandr.kudrya@gmail.com>")

(maintainers
 "Daniel Vlasenco <vlasenko.daniil26@gmail.com>"
 "Alexandr Kudrya <alexandr.kudrya@gmail.com>")

(bug_reports "https://github.com/spisladqo/FSharpUnitsOfMeasure/issues")

(homepage "https://github.com/spisladqo/FSharpUnitsOfMeasure")

(package
 (name FSharpUnitsOfMeasure)
 (synopsis "An interpreter for F# with support of units of measure")
 (description "An interpreter for F# with support of units of measure")
 (version 0.1)
 (allow_empty)
 (depends
  dune
  angstrom
  qcheck
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  ppx_deriving_qcheck
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)))
