(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "FIXME Vasya Pupkin <vasya@pupkin.ru>")

(maintainers "FIXME Vasya Pupkin <vasya@pupkin.ru>")

(bug_reports "https://github.com/Kakadu/fp2024")

(homepage "https://github.com/Kakadu/fp2024")

(package
 (name Lambda) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "FIXME An interpreter for language")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (documentation "https://kakadu.github.io/fp2024/docs/Lambda")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files add the same dependecies here too
  ))
