(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Ilia Suponev")

(maintainers "Ilia Suponev")

(bug_reports
 "https://github.com/IliaSuponeff/OCaml-PolymorphicVariantsTypes/")

(homepage "https://github.com/IliaSuponeff/OCaml-PolymorphicVariantsTypes/")

(package
 (name OCamlPolymorphicVariantsTypes)
 (synopsis "An interpreter for miniML language")
 (description
  "An interpreter for miniML language similar to OCaml with polymorphic variants types")
 (documentation
  "https://kakadu.github.io/fp2024/docs/OCamlPolymorphicVariantsTypes")
 (version 0.1)
 (depends
  dune
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)))
