(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors
 "Rodion Suvorov <rodion.suvorov.94@mail.ru>"
 "Mikhail Gavrilenko <qrutyq@gmail.com>")

(maintainers
 "Rodion Suvorov <rodion.suvorov.94@mail.ru>"
 "Mikhail Gavrilenko <qrutyq@gmail.com>")

(bug_reports "https://github.com/qrutyy/OcamlADT")

(homepage "https://github.com/qrutyy/OcamlADT")

(package
 (name OcamlADT) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for Ocaml language with ADT")
 (description "An interpreter for Ocaml language with ADT.")
 (version 0.1)
 (depends
  dune
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  ppx_deriving_qcheck
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  base
  stdio
  angstrom
  qcheck-core
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
