(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors
 "Sofya Kozyreva <k81sofia@gmail.com>"
 "Maksim Shipilov <shipilovmaksim05@gmail.com>")

(maintainers
 "Sofya Kozyreva <k81sofia@gmail.com>"
 "Maksim Shipilov <shipilovmaksim05@gmail.com>")

(bug_reports "https://github.com/sofyak0zyreva/OcamlBR")

(homepage "https://github.com/sofyak0zyreva/OcamlBR")

(package
 (name OcamlBR)
 (synopsis "An interpreter for a subset of OCaml with bidirectional records")
 (description
  "An interpreter for a subset of OCaml with bidirectional records")
 ;(documentation "https://kakadu.github.io/fp2024/docs/OcamlBR")
 (version 0.1)
 (depends
  dune
  (ppx_inline_test :with-test)
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
