(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Viacheslav Sidorov, Danila Rudnev-Stepanyan")

(maintainers "Viacheslav Sidorov, Danila Rudnev-Stepanyan")

(bug_reports "https://github.com/Kakadu/fp2024")

(homepage "https://github.com/Kakadu/fp2024")

(package
 (name OcamlRV) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for mini version of Ocaml with Recursive values")
 (description
  "")
 (documentation "https://kakadu.github.io/fp2024/docs/Lambda")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
