(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Vyacheslav Kochergin vyacheslav.kochergin1@gmail.com, Roman Mukovenkov roman.mukovenkov@gmail.com, Yuliana Ementyan ementyan.yuliana@gmail.com")

(maintainers "Vyacheslav Kochergin vyacheslav.kochergin1@gmail.com, Roman Mukovenkov roman.mukovenkov@gmail.com, Yuliana Ementyan ementyan.yuliana@gmail.com")

(bug_reports "https://github.com/VyacheslavIurevich/fp2024")

(homepage "https://github.com/VyacheslavIurevich/fp2024")

(package
 (name RISCV_ASM) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for mini-language similiar to RISC-V ASM")
 (description
  "An interpreter for mini-language similiar to RISC-V ASM. Bitmanip and RVV supported (TODO).")
 (documentation "https://kakadu.github.io/fp2024/docs/RISC-V_ASM_interpreter")
 (version 0.1)
 (depends
  dune
  (ppx_inline_test :with-test)
  ppx_expect
  ppx_deriving
  bisect_ppx
  qcheck-core
  ppx_deriving_qcheck
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
