(lang dune 3.7)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Dmitri Chirkov <chdmitry2@gmail.com>")

(maintainers "Dmitri Chirkov")

(bug_reports "https://github.com/kinokotakenoko9/SchemeCWCC")

(homepage "https://github.com/kinokotakenoko9/SchemeCWCC")

(package
 (name SchemeCWCC)
 (synopsis "An interpreter for subset of Scheme with call/cc")
 (description
  "An interpreter for subset of Scheme language with the support of call/cc")
 ; (documentation "https://kakadu.github.io/fp2024/docs/SchemeCWCC")
 (version 0.1)
 (depends
  dune
  (ppx_inline_test :with-test)
  ppx_deriving
  bisect_ppx
  (odoc :with-doc)
  (ocamlformat :build)
  ; base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
