(library
 (name tests)
 (public_name CSharpStrange.Lib.Tests)
 (modules Parser_tests Pp_tests)
 (libraries angstrom c_sharp_strange_lib)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (preprocess
  (pps ppx_expect)))

(cram
 (applies_to ast_fact)
 (deps ../bin/ast_fact.exe ../bin/REPL.exe ../bin/factorial.cs))
