(include_subdirs no)

(library
 (name tests )
 (libraries ETenyaeva_lib)
 (preprocess
  (pps ppx_expect ppx_deriving.show))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (applies_to testAst)
 (deps ../bin/main.exe))

; (executable
;  (name gen_tests)
;  (libraries lambda_lib)
;  (modules gen_tests)
;  (instrumentation
;   (backend bisect_ppx)))

; (rule
;  (deps ./gen_tests.exe)
;  (targets
;   lam_zero.txt
;   lam_one.txt
;   lam_1+1.txt
;   lam_2x1.txt
;   lam_3x2.txt
;   lam_fac3.txt)
;  (mode
;   (promote (until-clean)))
;  (action
;   (run %{deps})))

; (cram
;  (applies_to interpret_tests)
;  (deps
;   lam_zero.txt
;   lam_one.txt
;   lam_1+1.txt
;   lam_2x1.txt
;   lam_3x2.txt
;   lam_fac3.txt
;   ../bin/REPL.exe))
